--- a/EasyISP.cfg
+++ b/EasyISP.cfg
@@ -1,7 +1,6 @@
-// This script enhances the efficiency of all engines and RCS modules in Kerbal Space Program by increasing their Specific Impulse (ISP). A higher ISP means better fuel efficiency.
+// This script enhances the efficiency of all engines and RCS modules in Kerbal Space Program by increasing their Specific Impulse (ISP). A higher ISP means better fuel efficiency. Mult mode engines are also supported.
 // To adjust the efficiency boost, change the number in the lines '@k0 *= 5' and '@k1 *= 5' to any positive number you choose. For example, changing '5' to '10' will give ISP 10x greater than  default.
 // Set the values to 1 to revert to the default ISP values.
-// This script works with all versions of Kerbal Space Program and affects all modes of engines.
 
 @PART[*]:HAS[@MODULE[ModuleEngines*]]:FINAL
 {
