--- a/EasyISP.cfg
+++ b/EasyISP.cfg
@@ -18,3 +18,29 @@
     }
   }
 }
+
+@PART[*]:HAS[@MODULE[ModuleB9PartSwitch]]:FINAL
+{
+  @MODULE[ModuleB9PartSwitch]
+  {
+	  @SUBTYPE,*
+    {
+      @MODULE,*
+      {
+        @DATA,*
+        {
+			    @atmosphereCurve,*
+          {
+				    k2 = #$key,0[1, ]$
+				    @k2 *= 1  // In some engine-switchable mod (e.g. bluedog_db)， change this numeral to your chosen multiplier.
+				    @key,0 = #0 $k2$
+				
+				    k3 = #$key,1[1, ]$
+				    @k3 *= 1  // In some engine-switchable mod (e.g. bluedog_db)， change the numeral to your chosen multiplier.
+				    @key,1 = #1 $k3$
+			    }
+		    }
+      }
+	  }
+  }
+}
