--- a/EasyISP.cfg
+++ b/EasyISP.cfg
@@ -1,4 +1,4 @@
-// This script enhances the efficiency of all engines and RCS modules in Kerbal Space Program by increasing their Specific Impulse (ISP). A higher ISP means better fuel efficiency. Mult mode engines are also supported.
+// This script enhances the efficiency of all engines and RCS modules in Kerbal Space Program by increasing their Specific Impulse (ISP). A higher ISP means better fuel efficiency. Multi mode engines are also supported.
 // To adjust the efficiency boost, change the number in the lines '@k0 *= 5' and '@k1 *= 5' to any positive number you choose. For example, changing '5' to '10' will give ISP 10x greater than  default.
 // Set the values to 1 to revert to the default ISP values.
 
