refactor: add global EasyISP settings node. update comments. update formatting

--- a/EasyISP.cfg
+++ b/EasyISP.cfg
@@ -1,19 +1,46 @@
-// This script enhances the efficiency of all engines and RCS modules in Kerbal Space Program by increasing their Specific Impulse (ISP). A higher ISP means better fuel efficiency. Multi mode engines are also supported.
-// To adjust the efficiency boost, change the number in the lines '@k0 *= 5' and '@k1 *= 5' to any positive number you choose. For example, changing '5' to '10' will give ISP 10x greater than  default.
-// Set the values to 1 to revert to the default ISP values.
+// |===================================|
+// |  EasyISP — Simple Isp Multiplier 
+// |
+// |  Scale engine Isp via the `atmosphereCurve` values
+// |  Applies to all parts with ModuleEngines|ModuleEnginesFX
+// |
+// |===================================|
+// |
+// |  Adjust the values in the area below
+// |  Save the file and start KSP
+// |
+// |===================================|
 
-@PART[*]:HAS[@MODULE[ModuleEngines*]]:FINAL
+EASYISP_SETTINGS
+{
+  seaLevelMultiplier = 2  // <- Change this number to adjust sea level Isp for all engines
+  vacuumMultiplier   = 2  // <- Change this number to adjust vacuum Isp for all engines
+}
+
+// |===================================|
+// |  1.0 = no change
+// |  2.0 = double Isp
+// |  0.5 = half Isp
+// |  1000 = "The Expanse"ish
+// |===================================|
+
+@PART[*]:HAS[@MODULE[ModuleEngines*]]:AFTER[EasyISP]
 {
   @MODULE[ModuleEngines*],*
   {
     @atmosphereCurve
     {
+      // Pull multipliers from the global settings node.
+      multSL  = #$@EASYISP_SETTINGS/seaLevelMultiplier$
+      multVac = #$@EASYISP_SETTINGS/vacuumMultiplier$
+
+      // We read the Isp (2nd value) from key, multiply it, then write it back.
       k0 = #$key,0[1, ]$
-      @k0 *= 5  // To modify engine performance at sea level, change this numeral to your chosen multiplier.
+      @k0 *= #$multSL$
       @key,0 = #0 $k0$
-      
+
       k1 = #$key,1[1, ]$
-      @k1 *= 5  // To modify engine performance in a vacuum (space), change the numeral to your chosen multiplier.
+      @k1 *= #$multVac$
       @key,1 = #1 $k1$
     }
   }
