--- a/EasyISP.cfg
+++ b/EasyISP.cfg
@@ -34,13 +34,14 @@ EASYISP_SETTINGS
       multSL  = #$@EASYISP_SETTINGS/seaLevelMultiplier$
       multVac = #$@EASYISP_SETTINGS/vacuumMultiplier$
 
-      // We read the Isp (2nd value) from key, multiply it, then write it back.
+      // key,0 = vacuum Isp | key,1 = sea-level(ASL) Isp.
+      // We read the Isp (2nd value) from each key, multiply it, then write it back.
       k0 = #$key,0[1, ]$
-      @k0 *= #$multSL$
+      @k0 *= #$multVac$
       @key,0 = #0 $k0$
 
       k1 = #$key,1[1, ]$
-      @k1 *= #$multVac$
+      @k1 *= #$multSL$
       @key,1 = #1 $k1$
     }
   }
