fix: normalize single-key atmosphereCurve for split Isp multipliers

--- a/EasyISP.cfg
+++ b/EasyISP.cfg
@@ -13,8 +13,8 @@
 
 EASYISP_SETTINGS
 {
-  seaLevelMultiplier = 2  // <- Change this number to adjust sea level Isp for all engines
-  vacuumMultiplier   = 2  // <- Change this number to adjust vacuum Isp for all engines
+  seaLevelMultiplier = 1  // <- Change this number to adjust sea level Isp for all engines
+  vacuumMultiplier   = 5  // <- Change this number to adjust vacuum Isp for all engines
 }
 
 // |===================================|
@@ -28,6 +28,13 @@ EASYISP_SETTINGS
 {
   @MODULE[ModuleEngines*],*
   {
+    @atmosphereCurve:HAS[#key[0,*],!key[1,*],!key[2,*]]
+    {
+      // Normalize single-key curves so they expose a sea-level entry.
+      k0_raw = #$key,0[1, ]$
+      key = 1 $k0_raw$ 0 0
+    }
+
     @atmosphereCurve
     {
       // Pull multipliers from the global settings node.
