--- a/EasyISP.cfg
+++ b/EasyISP.cfg
@@ -1,26 +1,25 @@
 // |===================================|
-// |  EasyISP — Simple Isp Multiplier 
+// |  EasyISP — Simple ISP Multiplier 
 // |
-// |  Scale engine Isp via the `atmosphereCurve` values
+// |  Scale engine ISP via the `atmosphereCurve` values
 // |  Applies to all parts with ModuleEngines|ModuleEnginesFX
 // |
 // |===================================|
 // |
-// |  Adjust the values in the area below
+// |  Adjust the ispMultiplier value in the area below
 // |  Save the file and start KSP
 // |
 // |===================================|
 
 EASYISP_SETTINGS
 {
-  seaLevelMultiplier = 1  // <- Change this number to adjust sea level Isp for all engines
-  vacuumMultiplier   = 5  // <- Change this number to adjust vacuum Isp for all engines
+  ispMultiplier = 2  // <- Change this number to scale Isp for all engines
 }
 
 // |===================================|
-// |  1.0 = no change
-// |  2.0 = double Isp
-// |  0.5 = half Isp
+// |  1.0 = stock ISP
+// |  2.0 = double ISP
+// |  0.5 = half ISP
 // |  1000 = "The Expanse"ish
 // |===================================|
 
@@ -28,28 +27,13 @@ EASYISP_SETTINGS
 {
   @MODULE[ModuleEngines*],*
   {
-    @atmosphereCurve:HAS[#key[0,*],!key[1,*],!key[2,*]]
-    {
-      // Normalize single-key curves so they expose a sea-level entry.
-      k0_raw = #$key,0[1, ]$
-      key = 1 $k0_raw$ 0 0
-    }
-
     @atmosphereCurve
     {
-      // Pull multipliers from the global settings node.
-      multSL  = #$@EASYISP_SETTINGS/seaLevelMultiplier$
-      multVac = #$@EASYISP_SETTINGS/vacuumMultiplier$
+      // Pull multiplier from the global settings node.
+      mult = #$@EASYISP_SETTINGS/ispMultiplier$
 
-      // key,0 = vacuum Isp | key,1 = sea-level(ASL) Isp.
-      // We read the Isp (2nd value) from each key, multiply it, then write it back.
-      k0 = #$key,0[1, ]$
-      @k0 *= #$multVac$
-      @key,0 = #0 $k0$
-
-      k1 = #$key,1[1, ]$
-      @k1 *= #$multSL$
-      @key,1 = #1 $k1$
+      // Multiply the ISP for every key in the curve.
+      @key,*[1, ] *= #$mult$
     }
   }
 }
