--- a/EasyISP.cfg
+++ b/EasyISP.cfg
@@ -23,7 +23,9 @@ EASYISP_SETTINGS
 // |  1000 = "The Expanse"ish
 // |===================================|
 
-@PART[*]:HAS[@MODULE[ModuleEngines*]]:AFTER[EasyISP]
+// EasyISP is intended to be a global ISP multiplier that applies after all other engine balance mods.
+// To ensure the multiplier is applied last, this patch runs in :FINAL.
+@PART[*]:HAS[@MODULE[ModuleEngines*]]:FINAL
 {
   @MODULE[ModuleEngines*],*
   {
