Consolidate release packaging for v1.2.1

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,7 @@ jobs:
 
       - name: Ensure tag does not exist
         run: |
+          # Fail fast to prevent reusing an existing release tag.
           tag="${{ steps.version.outputs.TAG }}"
           if git rev-parse --verify "refs/tags/$tag" >/dev/null 2>&1; then
             echo "Tag $tag already exists" >&2
@@ -36,6 +37,7 @@ jobs:
 
       - name: Validate DOWNLOAD URL
         run: |
+          # Enforce that EasyISP.version points at the exact release tag URL.
           tag="${{ steps.version.outputs.TAG }}"
           python3 - "$tag" <<'PY'
           import json
@@ -61,6 +63,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          # Create the release and tag in one step so packaging can attach assets immediately.
           tag="${{ steps.version.outputs.TAG }}"
           mode="${RELEASE_MODE:-draft}"
           if [[ "$mode" != "draft" && "$mode" != "publish" ]]; then
@@ -73,3 +76,27 @@ jobs:
           fi
           echo "Creating $mode release for $tag"
           "${args[@]}"
+
+      - name: Package manifest files
+        run: |
+          # Build the canonical ZIP from the manifest to ensure GameData/EasyISP layout.
+          bash .github/scripts/package.sh --version "${{ steps.version.outputs.VERSION }}"
+
+      - name: Upload zip to release
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # Upload the asset to the release without overwriting existing files.
+          tag="${{ steps.version.outputs.TAG }}"
+          asset="EasyISP-v${{ steps.version.outputs.VERSION }}.zip"
+          asset_path="$GITHUB_WORKSPACE/$asset"
+          if [[ ! -f "$asset_path" ]]; then
+            echo "Expected artifact $asset_path not found" >&2
+            exit 1
+          fi
+          gh release upload "$tag" "$asset_path"
+
+      - name: Confirm upload
+        run: |
+          # Confirm the asset name and tag for release logs.
+          echo "Uploaded EasyISP-v${{ steps.version.outputs.VERSION }}.zip to release ${{ steps.version.outputs.TAG }}"
