--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,13 +26,22 @@ jobs:
       - name: Fetch tags
         run: git fetch --tags
 
-      - name: Ensure tag does not exist
+      - name: Check for existing tag/release
+        id: tag_check
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Fail fast to prevent reusing an existing release tag.
+          # Allow retries when packaging/upload fails after tag creation.
           tag="${{ steps.version.outputs.TAG }}"
           if git rev-parse --verify "refs/tags/$tag" >/dev/null 2>&1; then
-            echo "Tag $tag already exists" >&2
-            exit 1
+            echo "Tag $tag already exists; verifying release is present for retry."
+            if ! gh release view "$tag" >/dev/null 2>&1; then
+              echo "Tag $tag exists but no GitHub release found." >&2
+              exit 1
+            fi
+            echo "tag_exists=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "tag_exists=false" >> "$GITHUB_OUTPUT"
           fi
 
       - name: Validate DOWNLOAD URL
@@ -59,7 +68,13 @@ jobs:
           print("DOWNLOAD field matches expected release tag")
           PY
 
+      - name: Package manifest files
+        run: |
+          # Build the canonical ZIP from the manifest to ensure GameData/EasyISP layout.
+          bash .github/scripts/package.sh --version "${{ steps.version.outputs.VERSION }}"
+
       - name: Create tag and GitHub release
+        if: steps.tag_check.outputs.tag_exists != 'true'
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -76,11 +91,6 @@ jobs:
           fi
           echo "Creating $mode release for $tag"
           "${args[@]}"
-
-      - name: Package manifest files
-        run: |
-          # Build the canonical ZIP from the manifest to ensure GameData/EasyISP layout.
-          bash .github/scripts/package.sh --version "${{ steps.version.outputs.VERSION }}"
 
       - name: Upload zip to release
         env:
