feat: Add support for B9PartSwitch to scale atmosphereCurve values with EasyISP multiplier

--- a/EasyISP.cfg
+++ b/EasyISP.cfg
@@ -39,3 +39,29 @@ EASYISP_SETTINGS
     }
   }
 }
+
+// B9PartSwitch stores subtype engine config under SUBTYPE/MODULE/DATA.
+// Scale stored atmosphereCurve values so subtype switching keeps EasyISP multiplier.
+@PART[*]:HAS[@MODULE[ModuleB9PartSwitch]]:NEEDS[B9PartSwitch]:FINAL
+{
+  @MODULE[ModuleB9PartSwitch],*
+  {
+    @SUBTYPE,*
+    {
+      @MODULE,*
+      {
+        @DATA,*:HAS[@atmosphereCurve]
+        {
+          @atmosphereCurve
+          {
+            // Pull multiplier from the same global settings node.
+            mult = #$@EASYISP_SETTINGS/ispMultiplier$
+
+            // Multiply the ISP for every key in the curve.
+            @key,*[1, ] *= #$mult$
+          }
+        }
+      }
+    }
+  }
+}
