fix: Restrict MODULE selection to those with ModuleEngines identifier for B9PartSwitch compatibility

--- a/EasyISP.cfg
+++ b/EasyISP.cfg
@@ -48,7 +48,7 @@ EASYISP_SETTINGS
   {
     @SUBTYPE,*
     {
-      @MODULE,*
+      @MODULE,*:HAS[@IDENTIFIER:HAS[#name[ModuleEngines*]]]
       {
         @DATA,*:HAS[@atmosphereCurve]
         {
